# a-cabal-error

./: a-cabal-error.cabal
src/: APlugin.hs
test/: PluginTest.hs
