cabal-version:      2.4

name:               a-cabal-error

version:            0.1.0.0

synopsis:           test project

description:        Just a test project

homepage:           https://github.com/JakobBruenker/a-cabal-error

bug-reports:        https://github.com/JakobBruenker/a-cabal-error/issues

license:            MIT

author:             Jakob Brünker

maintainer:         jakob.bruenker@gmail.com

category:           Development

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  APlugin

    other-extensions: ScopedTypeVariables,
                      BlockArguments,
                      LambdaCase,
                      GADTs,
                      RecordWildCards,
                      OverloadedRecordDot,
                      NoFieldSelectors,
                      ViewPatterns,
                      StrictData,
                      PatternSynonyms

    build-depends:    base >=4.16.0.0 && < 5,
                      ghc >= 9.3,

    hs-source-dirs:   src

    default-language: GHC2021

    ghc-options:      -Wall -Wcompat

test-suite a-cabal-error-test
    default-language: GHC2021

    other-extensions: BlockArguments

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          PluginTest.hs

    build-depends:    base >=4.17.0.0 && <5,
                      a-cabal-error,

    ghc-options:      -fplugin=APlugin -Wall
